Fix compact navbar on IE and overflow-y attribute.

--- a/less/shoehorn-bootstrap.less
+++ b/less/shoehorn-bootstrap.less
@@ -312,7 +312,7 @@ form select, form input[type="text"], form input[type="password"], form.atto_for
 }
 
 @media(min-width: @screen-sm-min) {
-  .navbar-collapse.collapse {
+  body.ie.compactnavbar .navbar-collapse.collapse {
     display: inline-block !important;  // IE.
   }
 }
