--- a/style/moodle.css
+++ b/style/moodle.css
@@ -17882,7 +17882,7 @@ select.singleselect {
   z-index: 200;
 }
 @media (min-width: 768px) {
-  .navbar-collapse.collapse {
+  body.ie.compactnavbar .navbar-collapse.collapse {
     display: inline-block !important;
   }
 }
@@ -20566,10 +20566,13 @@ body.fontawesome #frontpage-category-names h2:before {
 #block-region-page-bottom {
   margin-top: 1em;
 }
+#block-region-page-bottom .block .input-group {
+  display: block;
+}
 body.editing #block-region-page-bottom .block {
   min-height: 200px;
   max-height: 200px;
-  overflow-y: overlay;
+  overflow-y: scroll;
 }
 /*
 #block-region-page-bottom {
